--- a/src/css/main.css
+++ b/src/css/main.css
@@ -378,6 +378,20 @@ body {
 .egg-group-title * {
   font-family: "Georgia", serif; }
 
+#egg-load {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  background-color: #FFFFFF;
+  z-index: 150; }
+  #egg-load .egg-img-load {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    background-image: url("../img/loader.gif");
+    background-position: center;
+    background-repeat: no-repeat; }
+
 .egg-dark {
   color: #000000; }
 
