--- a/src/css/scss/config/geral.scss
+++ b/src/css/scss/config/geral.scss
@@ -14,6 +14,23 @@
 	}
 }
 
+#egg-load{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	background-color: $color_light;
+	z-index: 150;
+
+	.egg-img-load{
+		width: 100%;
+		height: 100%;
+		position: fixed;
+		background-image: url('../img/loader.gif');
+		background-position: center;
+		background-repeat: no-repeat;
+	}
+}
+
 // colors
 .egg-dark{
 	color: $color-dark;
